Remove summary classes

--- a/files/en-us/web/guide/ajax/getting_started/index.html
+++ b/files/en-us/web/guide/ajax/getting_started/index.html
@@ -11,7 +11,7 @@ tags:
 ---
 <div>{{DefaultAPISidebar("XMLHttpRequest")}}</div>
 
-<p class="summary">This article guides you through the AJAX basics and gives you some simple hands-on examples to get you started.</p>
+<p>This article guides you through the AJAX basics and gives you some simple hands-on examples to get you started.</p>
 
 <h2 id="Whats_AJAX">What's AJAX?</h2>
 
