--- a/files/en-us/web/guide/ajax/wai_aria_live_regions_api_support/index.html
+++ b/files/en-us/web/guide/ajax/wai_aria_live_regions_api_support/index.html
@@ -6,7 +6,7 @@ tags:
   - Accessibility
 ---
 <div class="warning">
- These notes are for developers of screen readers. Developers should use the <a href="/en-US/docs/Web/Accessibility/ARIA/ARIA_Live_Regions">ARIA live regions developer documentation</a>.</div>
+ <p><strong>Warning:</strong> These notes are for developers of screen readers. Developers should use the <a href="/en-US/docs/Web/Accessibility/ARIA/ARIA_Live_Regions">ARIA live regions developer documentation</a>.</p></div>
 <p>Firefox 3 contains important improvements to the way the Mozilla engine exposes live changes in a document.</p>
 <p>These features will help screen reader developers improve the quality and performance of live region support, both for pages that are marked up with ARIA live region markup, and for pages where the author did not add any additional markup.</p>
 <p>Please read the <a href="https://www.w3.org/WAI/PF/aria/#liveregions">ARIA spec</a> or the <a href="/en-US/docs/Web/Guide/AJAX/WAI_ARIA_Live_Regions_API_Support">live region report</a> to learn about ARIA live region markup.</p>
