--- a/files/en-us/web/guide/audio_and_video_delivery/webaudio_playbackrate_explained/index.html
+++ b/files/en-us/web/guide/audio_and_video_delivery/webaudio_playbackrate_explained/index.html
@@ -8,8 +8,7 @@ tags:
   - Video
   - playbackRate
 ---
-<div class="summary">
-<p><span class="seoSummary">The <code>playbackRate</code> property of the {{ htmlelement("audio") }} and {{ htmlelement("video") }} elements allows us to change the speed, or rate, at which a piece of web audio or video is playing</span>. This article explains <code>playbackRate</code> in detail.</p>
+<p>The <code>playbackRate</code> property of the {{ htmlelement("audio") }} and {{ htmlelement("video") }} elements allows us to change the speed, or rate, at which a piece of web audio or video is playing. This article explains <code>playbackRate</code> in detail.</p>
 </div>
 
 <h2 id="playbackRate_basics">playbackRate basics</h2>
