--- a/files/en-us/web/guide/unicode_bidrectional_text_algorithm/index.html
+++ b/files/en-us/web/guide/unicode_bidrectional_text_algorithm/index.html
@@ -18,9 +18,9 @@ tags:
 ---
 <div>{{draft}}</div>
 
-<p><span class="seoSummary">The <strong>Unicode</strong>®<strong> Bidirectional Algorithm</strong> (also known as the <strong>BiDi Algorithm</strong>) is part of the Unicode text standard that describes how the {{Glossary("user agent")}} should order characters while rendering Unicode text.</span> Understanding this algorithm in at least basic terms is helpful when you're striving to produce localization-ready web content or apps.</p>
+<p>The <strong>Unicode</strong>®<strong> Bidirectional Algorithm</strong> (also known as the <strong>BiDi Algorithm</strong>) is part of the Unicode text standard that describes how the {{Glossary("user agent")}} should order characters while rendering Unicode text. Understanding this algorithm in at least basic terms is helpful when you're striving to produce localization-ready web content or apps.</p>
 
-<p class="summary">In this guide, we'll take a look at the BiDi Algorithm and learn in general what it does and how it applies to your content, so that you'll be better prepared when using the features of {{Glossary("HTML")}} and {{Glossary("CSS")}} to which the algorithm applies while determining the order and directionality of text during rendering.</p>
+<p>In this guide, we'll take a look at the BiDi Algorithm and learn in general what it does and how it applies to your content, so that you'll be better prepared when using the features of {{Glossary("HTML")}} and {{Glossary("CSS")}} to which the algorithm applies while determining the order and directionality of text during rendering.</p>
 
 <h2 id="Fundamentals">Fundamentals</h2>
 
