--- a/files/en-us/web/guide/user_input_methods/index.html
+++ b/files/en-us/web/guide/user_input_methods/index.html
@@ -12,15 +12,13 @@ tags:
   - touch
   - user input
 ---
-<div class="summary">
-<p><span class="seoSummary">Modern web user input goes beyond simple mouse and keyboard: think of touchscreens for example. This article provides recommendations for managing user input and implementing controls in open web apps, along with FAQs, real-world examples, and links to further information for anyone needing more detailed information on the underlying technologies. Relevant APIs and events include <a href="/en-US/docs/Web/API/Touch_events">touch events</a>, <a href="/en-US/docs/Web/API/Pointer_Lock_API">Pointer Lock API</a>, <a href="/en-US/docs/Web/API/CSS_Object_Model/Managing_screen_orientation">Screen Orientation API</a>, <a href="/en-US/docs/Web/API/Fullscreen_API">Fullscreen API</a>, <a href="/en-US/docs/Web/API/HTML_Drag_and_Drop_API">Drag &amp; Drop</a> and more.</span></p>
-</div>
+<p>Modern web user input goes beyond simple mouse and keyboard: think of touchscreens for example. This article provides recommendations for managing user input and implementing controls in open web apps, along with FAQs, real-world examples, and links to further information for anyone needing more detailed information on the underlying technologies. Relevant APIs and events include <a href="/en-US/docs/Web/API/Touch_events">touch events</a>, <a href="/en-US/docs/Web/API/Pointer_Lock_API">Pointer Lock API</a>, <a href="/en-US/docs/Web/API/CSS_Object_Model/Managing_screen_orientation">Screen Orientation API</a>, <a href="/en-US/docs/Web/API/Fullscreen_API">Fullscreen API</a>, <a href="/en-US/docs/Web/API/HTML_Drag_and_Drop_API">Drag &amp; Drop</a> and more.</p>
 
 <h2 id="User_input_and_controls_workflow">User input and controls workflow</h2>
 
 <p>The following diagram illustrates the typical workflow for implementing user input mechanisms:</p>
 
-<p style="text-align: center;"><img alt="" src="user-input-and-controls.png"></p>
+<p><img alt="" src="user-input-and-controls.png"></p>
 
 <p>First of all, you need to decide which input mechanisms you want to cover in your application out of mouse, keyboard, finger touch and so on. Once you decided the input mechanisms, you can control them using tools offered by the web platform or JavaScript libraries.</p>
 
