--- a/files/en-us/web/guide/audio_and_video_delivery/live_streaming_web_audio_and_video/index.html
+++ b/files/en-us/web/guide/audio_and_video_delivery/live_streaming_web_audio_and_video/index.html
@@ -5,9 +5,7 @@ tags:
   - Guide
   - adaptive streaming
 ---
-<div class="summary">
-<p><span class="seoSummary">Live streaming technology is often employed to relay live events such as sports, concerts and more generally TV and Radio programmes that are output live. Often shortened to just streaming, live streaming is the process of transmitting media 'live' to computers and devices. This is a fairly complex and nascent subject with a lot of variables, so in this article, we'll introduce you to the subject and let you know how you can get started. </span></p>
-</div>
+<p>Live streaming technology is often employed to relay live events such as sports, concerts and more generally TV and Radio programmes that are output live. Often shortened to just streaming, live streaming is the process of transmitting media 'live' to computers and devices. This is a fairly complex and nascent subject with a lot of variables, so in this article, we'll introduce you to the subject and let you know how you can get started.</p>
 
 <p>The key consideration when streaming media to a browser is the fact that rather than playing a finite file we are relaying a file that is being created on the fly and has no pre-determined start or end.</p>
 
@@ -58,7 +56,7 @@ tags:
 <p>RTSP 2.0 is currently in development and is not backward compatible with RTSP 1.0.</p>
 
 <div class="warning">
-<p><strong>Important</strong>: Although the {{ htmlelement("audio") }} and {{ htmlelement("video") }} tags are protocol agnostic, no browser currently supports anything other than HTTP without requiring plugins, although this looks set to change. Protocols other than HTTP may also be subject to blocking from firewalls or proxy servers.</p>
+<p><strong>Warning:</strong> Although the {{ htmlelement("audio") }} and {{ htmlelement("video") }} tags are protocol agnostic, no browser currently supports anything other than HTTP without requiring plugins, although this looks set to change. Protocols other than HTTP may also be subject to blocking from firewalls or proxy servers.</p>
 </div>
 
 <h2 id="Using_streaming_protocols">Using streaming protocols</h2>
