--- a/files/en-us/web/guide/audio_and_video_delivery/setting_up_adaptive_streaming_media_sources/index.html
+++ b/files/en-us/web/guide/audio_and_video_delivery/setting_up_adaptive_streaming_media_sources/index.html
@@ -10,9 +10,7 @@ tags:
   - Video
   - adaptive streaming
 ---
-<div class="summary">
-<p><span class="seoSummary">Let's say you want to set up an adaptive streaming media source on a server, to be consumed inside an HTML media element. How would you do that? This article explains how, looking at two of the most common formats: MPEG-DASH and HLS (HTTP Live Streaming.)</span></p>
-</div>
+<p>Let's say you want to set up an adaptive streaming media source on a server, to be consumed inside an HTML media element. How would you do that? This article explains how, looking at two of the most common formats: MPEG-DASH and HLS (HTTP Live Streaming.)</p>
 
 <h2 id="Choosing_formats">Choosing formats</h2>
 
