--- a/files/en-us/web/guide/css/css_layout/index.html
+++ b/files/en-us/web/guide/css/css_layout/index.html
@@ -9,7 +9,7 @@ tags:
   - Web
   - Web Development
 ---
-<p class="summary">There are a number of methods that you can use to lay out your web pages and applications. MDN contains a number of in-depth guides to the different methods, and this page provides an overview of them all.</p>
+<p>There are a number of methods that you can use to lay out your web pages and applications. MDN contains a number of in-depth guides to the different methods, and this page provides an overview of them all.</p>
 
 <h2>Normal flow, block, and inline layout</h2>
 
@@ -119,4 +119,3 @@ tags:
   <dt><a href="/en-US/docs/Web/CSS/CSS_Box_Alignment/Box_Alignment_in_Multi-column_Layout">Box alignment in multi-column layout</a></dt>
   <dd>How alignment will work in multicol.</dd>
 </dl>
-
