Remove seoSummary classes

--- a/files/en-us/web/guide/woff/index.html
+++ b/files/en-us/web/guide/woff/index.html
@@ -7,7 +7,7 @@ tags:
   - WOFF
   - WOFF2
 ---
-<p><span class="seoSummary"><strong>WOFF</strong> (the <strong>Web Open Font Format</strong>) is a web font format developed by Mozilla in concert with Type Supply, LettError, and other organizations. It </span>uses a compressed version of the same table-based <code>sfnt</code> structure used by TrueType, OpenType, and Open Font Format, but <span class="seoSummary">adds metadata and private-use data structures, including predefined fields allowing foundries and vendors to provide license information if desired.</span></p>
+<p><strong>WOFF</strong> (the <strong>Web Open Font Format</strong>) is a web font format developed by Mozilla in concert with Type Supply, LettError, and other organizations. It uses a compressed version of the same table-based <code>sfnt</code> structure used by TrueType, OpenType, and Open Font Format, but adds metadata and private-use data structures, including predefined fields allowing foundries and vendors to provide license information if desired.</p>
 
 <p>There are three main benefits to using WOFF:</p>
 
