--- a/files/en-us/web/guide/graphics/index.html
+++ b/files/en-us/web/guide/graphics/index.html
@@ -12,7 +12,7 @@ tags:
   - WebGL
   - WebRTC
 ---
-<p><span class="seoSummary">Websites and applications often need to present graphics, such as images.</span> Static images can easily be displayed using the {{HTMLElement("img")}} element, or by setting the background of HTML elements using the {{cssxref("background-image")}} property. You can also construct graphics on-the-fly, or manipulate images after the fact. <span class="seoSummary">These articles provide insight into how you can accomplish this.</span></p>
+<p>Websites and applications often need to present graphics, such as images. Static images can easily be displayed using the {{HTMLElement("img")}} element, or by setting the background of HTML elements using the {{cssxref("background-image")}} property. You can also construct graphics on-the-fly, or manipulate images after the fact. These articles provide insight into how you can accomplish this.</p>
 
 <h2 class="Documentation" id="2D_Graphics">2D Graphics</h2>
 
