--- a/files/en-us/web/guide/html/editable_content/index.html
+++ b/files/en-us/web/guide/html/editable_content/index.html
@@ -19,7 +19,7 @@ tags:
   <p><strong>Warning:</strong> As the <a href="https://w3c.github.io/editing/docs/execCommand/"><code>execCommand()</code> spec</a> warns, its features <q>are not implemented consistently or fully by user agents</q>, and in addition, it is marked as deprecated on the <a href="/en-US/docs/Web/API/Document/execCommand"><code>Document.execCommand()</code></a> reference page. Therefore, much of the content on this page cannot be trusted for use in production code.</p>
 </div>
 
-<p><span class="seoSummary">In HTML, any element can be editable. By using some JavaScript event handlers, you can transform your web page into a full and fast rich text editor. This article provides some information about this functionality.</span></p>
+<p>In HTML, any element can be editable. By using some JavaScript event handlers, you can transform your web page into a full and fast rich text editor. This article provides some information about this functionality.</p>
 
 <div class="note">
 <p><strong>Note:</strong> In Firefox 63 Beta/Dev edition, some of the rich-text editing features have been disabled by default, for better cross-browser compatibility. These are object resizing on {{htmlelement("img")}}, {{htmlelement("table")}}, and absolutely-positioned elements; inline table editing to add or remove rows and columns; and the grabber that allows moving of absolutely-positioned elements. See {{bug("1449564")}} for additional details.</p>
