--- a/files/en-us/web/guide/parsing_and_serializing_xml/index.html
+++ b/files/en-us/web/guide/parsing_and_serializing_xml/index.html
@@ -19,7 +19,7 @@ tags:
   - XMLDocument
   - XMLHttpRequest
 ---
-<p>At times, you may need to parse {{Glossary("XML")}} content and convert it into a {{Glossary("DOM")}} tree, or, conversely, serialize an existing DOM tree into XML. <span class="seoSummary">In this article, we'll look at the objects provided by the web platform to make the common tasks of serializing and parsing XML easy.</span></p>
+<p>At times, you may need to parse {{Glossary("XML")}} content and convert it into a {{Glossary("DOM")}} tree, or, conversely, serialize an existing DOM tree into XML. In this article, we'll look at the objects provided by the web platform to make the common tasks of serializing and parsing XML easy.</p>
 
 <dl>
 	<dt>{{domxref("XMLSerializer")}}</dt>
