--- a/files/en-us/web/guide/audio_and_video_delivery/cross-browser_audio_basics/index.html
+++ b/files/en-us/web/guide/audio_and_video_delivery/cross-browser_audio_basics/index.html
@@ -473,7 +473,7 @@ myAudio.volume = 0.5;</pre>
 
 <p>You should end up with something like this:</p>
 
-<p><img alt="A basic audio player with play/pause button and seek bar" src="simpleplayer.png" style="float: left;"></p>
+<p><img alt="A basic audio player with play/pause button and seek bar" src="simpleplayer.png"></p>
 
 <h3 id="Seeking_using_the_seek_bar">Seeking using the seek bar</h3>
 
