--- a/files/en-us/web/guide/audio_and_video_delivery/cross_browser_video_player/index.html
+++ b/files/en-us/web/guide/audio_and_video_delivery/cross_browser_video_player/index.html
@@ -13,7 +13,7 @@ tags:
 
 <p>Our example video player displays a clip from an open source movie called <a href="https://mango.blender.org/about/">Tears of Steel</a>, and includes typical video controls.</p>
 
-<p><img alt="a shot of a video player, with several control buttons such as play, pause and stop. The video is showing a group of men fighting a group of robots." src="video-player-example.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="a shot of a video player, with several control buttons such as play, pause and stop. The video is showing a group of men fighting a group of robots." src="video-player-example.png"></p>
 
 <div class="note">
 <p><strong>Note:</strong> You can see the <a href="https://iandevlin.github.io/mdn/video-player/">example running live</a>, or check out the <a href="https://github.com/iandevlin/iandevlin.github.io/tree/master/mdn/video-player">source code on Github</a>.</p>
