--- a/files/en-us/web/guide/html/editable_content/index.html
+++ b/files/en-us/web/guide/html/editable_content/index.html
@@ -74,7 +74,7 @@ user_pref("capability.policy.allowclipboard.Clipboard.paste", "allAccess");</pre
 
 <h2 id="Example_A_simple_but_complete_rich_text_editor">Example: A simple but complete rich text editor</h2>
 
-<pre class="brush: html" style="height: 500px; width: auto; overflow: auto;">&lt;!doctype html&gt;
+<pre class="brush: html">&lt;!doctype html&gt;
 &lt;html&gt;
 &lt;head&gt;
 &lt;title&gt;Rich Text Editor&lt;/title&gt;
