--- a/files/en-us/web/guide/audio_and_video_delivery/setting_up_adaptive_streaming_media_sources/index.html
+++ b/files/en-us/web/guide/audio_and_video_delivery/setting_up_adaptive_streaming_media_sources/index.html
@@ -276,7 +276,7 @@ http://media.example.com/segment2.ts
  <li><a href="https://www-itec.uni-klu.ac.at/bib/files/p89-lederer.pdf">Dynamic Adaptive Streaming over HTTP Dataset</a></li>
  <li><a href="https://msdn.microsoft.com/en-us/library/dn551370(v=vs.85).aspx">MPEG-DASH and streaming reference and resources (MSDN)</a></li>
  <li><a href="/en-US/docs/Web/Media/DASH_Adaptive_Streaming_for_HTML_5_Video">DASH Adaptive Streaming for HTML 5 Video</a></li>
- <li><a href="https://www.slideshare.net/christian.timmerer/dynamic-adaptive-streaming-over-http-from-content-creation-to-consumption" style="color: rgb(65, 131, 196); text-decoration: none; background: transparent;">Dynamic Adaptive Streaming over HTTP: From Content Creation to Consumption</a></li>
+ <li><a href="https://www.slideshare.net/christian.timmerer/dynamic-adaptive-streaming-over-http-from-content-creation-to-consumption">Dynamic Adaptive Streaming over HTTP: From Content Creation to Consumption</a></li>
 </ul>
 
 <h3 id="MPEG-DASH_tools">MPEG-DASH tools</h3>
