--- a/files/en-us/web/guide/audio_and_video_delivery/video_player_styling_basics/index.html
+++ b/files/en-us/web/guide/audio_and_video_delivery/video_player_styling_basics/index.html
@@ -13,7 +13,7 @@ tags:
 
 <h2 id="The_example_in_action">The example in action</h2>
 
-<p><img alt="A video player with play, stop, volume and fullscreen controls, showing an image of a soldier." src="video-player-styled.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="A video player with play, stop, volume and fullscreen controls, showing an image of a soldier." src="video-player-styled.png"></p>
 
 <p>You can find the code for the <a href="https://github.com/iandevlin/iandevlin.github.io/tree/master/mdn/video-player-styled">updated, styled example</a> on Github, and <a href="https://iandevlin.github.io/mdn/video-player-styled/">view it live</a>.</p>
 
