More misc markup fixes

--- a/files/en-us/web/guide/html/editable_content/index.html
+++ b/files/en-us/web/guide/html/editable_content/index.html
@@ -67,7 +67,7 @@ tags:
 
 <p>For security reasons, Firefox doesn't let JavaScript code use clipboard related features (copy, paste, etc.) by default. You can enable them by setting the preferences shown below using <code>about:config</code>:</p>
 
-<pre class="code">user_pref("capability.policy.policynames", "allowclipboard");
+<pre>user_pref("capability.policy.policynames", "allowclipboard");
 user_pref("capability.policy.allowclipboard.sites", "https://www.mozilla.org");
 user_pref("capability.policy.allowclipboard.Clipboard.cutcopy", "allAccess");
 user_pref("capability.policy.allowclipboard.Clipboard.paste", "allAccess");</pre>
