--- a/files/en-us/web/guide/mobile/a_hybrid_approach/index.html
+++ b/files/en-us/web/guide/mobile/a_hybrid_approach/index.html
@@ -36,7 +36,7 @@ tags:
 
 <h2 id="Examples">Examples</h2>
 
-<p><img alt="webowonder_mobile_and_desktop-300x225.jpg" class="internal rwrap" src="webowonder_mobile_and_desktop-300x225.jpg">For Mozilla's Web O’ Wonder demo site, we tried out a basic version of the hybrid approach, with positive results. We used some elements of responsive web design to give the site a mobile layout, along with user-agent detection to provide mobile-friendly videos and to re-order the demos if the user is on a phone. Feel free to check out the source code <a class="link-https" href="https://github.com/mozilla/webowonder/" title="Mozilla's Web O' Wonder Source Code">on github</a>.</p>
+<p><img alt="webowonder_mobile_and_desktop-300x225.jpg" src="webowonder_mobile_and_desktop-300x225.jpg">For Mozilla's Web O’ Wonder demo site, we tried out a basic version of the hybrid approach, with positive results. We used some elements of responsive web design to give the site a mobile layout, along with user-agent detection to provide mobile-friendly videos and to re-order the demos if the user is on a phone. Feel free to check out the source code <a class="link-https" href="https://github.com/mozilla/webowonder/">on github</a>.</p>
 
 <p>We could also be doing more development involving this approach very soon! In fact, one potential path for the main Mozilla site is roughly outlined in the “The Good” section above:</p>
 
