--- a/files/en-us/web/guide/parsing_and_serializing_xml/index.html
+++ b/files/en-us/web/guide/parsing_and_serializing_xml/index.html
@@ -112,7 +112,7 @@ const xmlStr = serializer.serializeToString(doc);</pre>
 <h2 id="See_also">See also</h2>
 
 <ul>
-	<li><a class="internal" href="/en-US/docs/Web/XPath">XPath</a></li>
+	<li><a href="/en-US/docs/Web/XPath">XPath</a></li>
 	<li>{{domxref("XMLHttpRequest")}}</li>
 	<li>{{domxref("Document")}}, {{domxref("XMLDocument")}}, and {{domxref("HTMLDocument")}}</li>
 </ul>
