--- a/files/en-us/web/guide/css/getting_started/challenge_solutions/index.html
+++ b/files/en-us/web/guide/css/getting_started/challenge_solutions/index.html
@@ -231,7 +231,7 @@ h3:before {
  <dd>Change your sample document, <code>doc2.html</code>, adding this tag to it near the end, just before <code>&lt;/BODY&gt;</code>: <code> &lt;IMG id="fixed-pin" src="Yellow-pin.png" alt="Yellow map pin"&gt;</code> Predict where the image will appear in your document. Then refresh your browser to see if you were correct.</dd>
  <dt>Solution</dt>
  <dd>The image appears to the right of the second list.<br>
- <img class="default internal" src="pin_placement.png"></dd>
+ <img src="pin_placement.png"></dd>
  <dt>Challenge</dt>
  <dd>Add a rule to your stylesheet that places the image in the top right of your document.</dd>
  <dt>Solution</dt>
