--- a/files/en-us/web/guide/html/constraint_validation/index.html
+++ b/files/en-us/web/guide/html/constraint_validation/index.html
@@ -75,7 +75,7 @@ tags:
    <td><code>text</code>, <code>search</code>, <code>url</code>, <code>tel</code>, <code>email</code>, <code>password</code></td>
    <td>A <a href="/en-US/docs/Web/JavaScript/Guide/Regular_Expressions">JavaScript regular expression</a> (compiled with the <a href="http://www.ecma-international.org/publications/standards/Ecma-262.htm">ECMAScript 5</a> <code>global</code>, <code>ignoreCase</code>, and <code>multiline</code> flags <em>disabled)</em></td>
    <td>The value must match the pattern.</td>
-   <td><code><strong><a href="/en-US/docs/Web/API/ValidityState/patternMismatch">patternMismatch</a></strong></code> constraint violation</td>
+   <td><a href="/en-US/docs/Web/API/ValidityState/patternMismatch"><strong><code>patternMismatch</code></strong></a> constraint violation</td>
   </tr>
   <tr>
    <td rowspan="3"><code><a href="/en-US/docs/Web/HTML/Attributes/min">min</a></code></td>
