--- a/files/en-us/web/guide/html/content_categories/index.html
+++ b/files/en-us/web/guide/html/content_categories/index.html
@@ -23,7 +23,7 @@ tags:
   <p><strong>Note:</strong> A more detailed discussion of these content categories and their comparative functionalities is beyond the scope of this article; for that, you may wish to read the <a href="https://html.spec.whatwg.org/multipage/dom.html#kinds-of-content">relevant portions of the HTML specification</a>.</p>
 </div>
 
-<p><a href="/en-US/docs/Web/Guide/HTML/Content_categories/content_categories_venn.png"><img alt="A Venn diagram showing how the various content categories interrelate. The following sections explain these relationships in text." class="default internal" src="content_categories_venn.png"></a></p>
+<p><a href="/en-US/docs/Web/Guide/HTML/Content_categories/content_categories_venn.png"><img alt="A Venn diagram showing how the various content categories interrelate. The following sections explain these relationships in text." src="content_categories_venn.png"></a></p>
 
 <h2 id="Main_content_categories">Main content categories</h2>
 
